Fixes issue 11: increase contrast of main navbar text.

--- a/server/main/static/main/common.css
+++ b/server/main/static/main/common.css
@@ -1246,7 +1246,8 @@ body > .navbar {
     line-height: 1;
 }
 
-.navbar-default .navbar-text {
+.navbar-default .navbar-text,
+.navbar-default .navbar-nav > li > a {
     color: #727272;
 }
 
